<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Watershed</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Navigation Bar -->
    <string name="title_activity_landing_page">Watershed</string>
    <string name="title_image_content_description">Watershed Image</string>
    <string name="draw_open_close">Watershed Menu</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="loading">Loading&#8230;</string>

    <!-- Landing Page -->
    <string name="title_activity_cover_photo_view">CoverPhotoViewActivity</string>
    <string name="landing_page_logo_text">Watershed</string>
    <string name="landing_page_facebook_button">Facebook</string>
    <string name="landing_page_sign_up_button">Sign Up with Email</string>
    <string name="landing_page_login_button"><![CDATA[Have an account? <b>Login.</b>]]></string>

    <!-- Login View -->
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_confirmation_hint">Confirmation</string>
    <string name="login_fragment_login_button">Log In</string>
    <string name="sign_up_fragment_login_button">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Field Report -->
    <string name="field_report_title">Field Report</string>
    <string name="urgent">Urgent?</string>
    <string name="not_urgent">Not Urgent</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_field_report">You\'ve submitted a field report!</string>
    <string name="add_fieldreport">Add Field Report</string>

    <!--About-->
    <string name="about_us">The Watershed Project\'s mission is to inspire Bay Area communities to understand, appreciate and protect our local watersheds. Located at the University of California\'s Richmond Field Station, since 1997 we have pursued this vision through various initiatives.\n\nThe Healthy Watersheds Initiative focuses on litter and other source of pollutants. The Living Shoreline Initiative aims to help people appreciate the rich potential for healthy underwater habitats in the Bay and along it\'s shoreline, with an emphasis on native Oyster restoration. The Greening Urban Watersheds Initiative seeks to redefine the way we inhabit our urban centers, envisioning a green cityscape that maintains or mimics the natural flows and rhythms of local ecosystems. </string>
    <string name="watershed_title">The Watershed Project</string>
    <string name="watershed_link"><a href="http://www.thewatershedproject.org/home.php">Visit our website</a></string>
    <string name="learn_more">Want to learn more?</string>

    <!--Facebook Auth-->
    <string name="facebook_app_id">1569630693287263</string>

    <!-- Task Creation -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="task_due_date">Pick a Date</string>
    <string name="task_mini_site">Pick a Mini Site</string>
    <string name="site">Site</string>
    <string name="create_task_submit">Create Task</string>
    <string name="required">Required</string>
    <string name="assignee">Assign to user</string>
    <string name="mini_site">Mini Site</string>

    <string name="pick_user">Pick User</string>
    <string name="loading_users">Loading Users..</string>
    <string name="clear_user">Clear User</string>

    <string name="pick_site">Pick MiniSite</string>
    <string name="loading_sites">Loading MiniSites..</string>
    <string name="cancel">Cancel</string>
    
    <!-- Task Show -->
    <string name="claim_task">You\'ve claimed this task!</string>

    <!-- Site Creation -->
    <string name="create_site_title">Title</string>
    <string name="create_site_address">Address</string>
    <string name="create_site_city">City</string>
    <string name="create_site_zip">Zip</string>
    <string name="create_site_state">State</string>
    <string name="create_site_submit">Create Site</string>

    <string name="create_site">You\'ve created a site!</string>
    <string name="edit_site">You\'ve edited the site!</string>

    <string name="add_minisite">Add Minisite</string>
    <string name="edit_site_title">Edit Site</string>
    <string name="subscribe_site">Subscribe to Site</string>

    <!-- Site Show-->
    <string name="subscribed_to_site">You\'ve subscribed to this site! You can now view unassigned tasks for all the site\'s minisites.</string>
    <string name="unsubscribed_to_site">You\'ve unsubscribed to this site!</string>

    <!-- Mini Site Creation -->
    <string name="create_mini_site_title">Create Mini Site</string>
    <string name="mini_site_destroy">Delete Mini Site</string>
    <string name="create_mini_site">You\'ve created a mini site!</string>
    <string name="edit_mini_site">You\'ve edited the mini site!</string>
    <string name="edit_mini_site_title">Edit Mini Site</string>

    <!-- Editing User -->
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_password">New Password</string>
    <string name="edit_profile_reenter">Confirm Password</string>
    <string name="edit_profile_confirm">Old Password</string>
    <string name="edit_info_text">General Information</string>
    <string name="edit_password_text">Change Password</string>
    <string name="edit_save_text">Confirm Changes</string>
    <string name="manage_profile">Manage User</string>

    <string name="delete_user">Delete User</string>
    <string name="delete_user_message">Are you sure you want to delete this user?</string>

    <string name="change_role">Change Role</string>

    <!-- Task Index -->
    <string name="no_tasks">Looks like you don\'t have any tasks!\nSwipe up to refresh.</string>
    <string name="no_tasks_refresh">Refresh</string>
    
    <!-- Site Index -->
    <string name="no_site">Looks like you don\'t have any sites!\nSwipe up to refresh.</string>
    <string name="no_site_refresh">Refresh</string>
    
    <!-- User Index -->
    <string name="no_user">Looks like there aren\'t any users!\nSwipe up to refresh.</string>
    <string name="no_user_refresh">Refresh</string>
    <string name="set_role">Set User Role</string>

    <!-- User Lists -->
    <string name="no_user_tasks">Looks like this user has no tasks!</string>
    <string name="no_user_sites">Looks like this user has no sites!</string>
    <string name="no_user_reports">Looks like this user hasn\'t submitted any field reports yet!</string>

    <!-- Heroku/IP Urls -->
    <string name="heroku_production">https://intense-reaches-1457.herokuapp.com/api/v1/</string>
    <string name="heroku_staging">https://floating-bayou-8262.herokuapp.com/api/v1/</string>
    <string name="local_staging">http://10.142.182.151:3000/api/v1/</string>

    <!-- Dialog Strings -->
    <string name="mini_site_delete_title">Delete Mini Site?</string>
    <string name="mini_site_delete_msg">Are you sure you want to delete this mini site? All associated field reports will be deleted.</string>
    
    <string name="task_delete_title">Delete Task?</string>
    <string name="task_delete_msg">Are you sure you want to delete this task? All associated field reports will be deleted.</string>
    
    <string name="site_delete_title">Delete Site?</string>
    <string name="site_delete_msg">Are you sure you want to delete this site? All associated tasks and mini sites will be deleted.</string>

    <string name="read_more">READ MORE</string>

    <string name="logout_title">Are you sure you want to log out?</string>
    <string name="logout_message">You will have to sign back in to view the application.</string>

    <string name="map_title">Continue to Maps?</string>
    <string name="map_message">If you continue, you will be redirected to the Google Maps app.</string>
</resources>
