<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/medium_gray"
    >

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/standard_margin"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/watershed_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wide_margin"
        android:layout_below="@id/about_title"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/about_us" />

    <TextView
        android:id="@+id/watershed_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/watershed_link"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/watershed_link"
        android:layout_centerHorizontal="true"
        android:text="@string/learn_more" />
</RelativeLayout>
