<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blueprint.watershed.Tasks.CreateTaskFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/title"
                />
            <EditText
                android:id="@+id/create_task_title"
                android:layout_width="0px"
                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/task_due_date"
                />
            <EditText
                android:id="@+id/create_task_due_date"
                android:layout_width="0px"
                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height">
         <TextView
             style="@style/WsLabel"
             android:text = "@string/urgent"/>

            <Switch
                android:id="@+id/field_report_urgent"
                android:textOn="@string/urgent"
                android:textOff="@string/not_urgent"
                android:layout_weight="3"
                android:layout_width="0px"
                android:layout_height="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/site"
                />
            <EditText
                android:id="@+id/create_task_site"
                android:layout_width="0px"
                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/assignee"
                />
            <EditText
                android:id="@+id/create_task_assignee"
                android:layout_width="0px"
                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <TextView
                style="@style/WsLabel"
                android:layout_height="@dimen/button_standard_height"
                android:text="@string/task_due_date"
                />
            <EditText
                android:id="@+id/create_task_description"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:lines="4"
                android:text=""/>
        </LinearLayout>


        </LinearLayout>


</FrameLayout>
