<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blueprint.watershed.MiniSites.CreateMiniSiteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        style="@style/BackGroundImageView"
        android:id = "@+id/mini_site_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/title"
                />
            <EditText
                android:id="@+id/create_mini_site_title"
                android:hint="@string/required"

                android:layout_width="0px"
                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/create_site_address"
                />
            <EditText
                android:id="@+id/create_mini_site_address"
                android:hint="@string/required"
                android:layout_width="0px"
                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/create_site_city"
                />
            <EditText
                android:id="@+id/create_mini_site_city"
                android:hint="@string/required"
                android:layout_width="0px"
                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/create_site_zip"
                />
            <EditText
                android:id="@+id/create_mini_site_zip"
                android:layout_width="0px"
                android:hint="@string/required"

                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_standard_height"
            android:gravity="bottom" >

            <TextView
                style="@style/WsLabel"
                android:text="@string/create_site_state"
                />
            <EditText
                android:id="@+id/create_site_state"
                android:layout_width="0px"
                android:hint="@string/required"

                android:layout_height="@dimen/button_standard_height"
                android:layout_weight="3"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                style="@style/WsLabel"
                android:gravity="bottom"
                android:layout_height="@dimen/button_standard_height"
                android:text="@string/description"
                />
            <EditText
                android:id="@+id/create_site_description"
                android:hint="@string/required"
                android:gravity="bottom"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:lines="4"
                android:text=""
                />
        </LinearLayout>

        <Button
            android:id="@+id/take_photo_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_large_height"
            android:layout_marginTop="8dp"
            android:text="Take Photo"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/create_mini_site_submit"
                android:layout_width="fill_parent"
                android:background="@color/ws_blue"
                android:textColor="@color/white"
                android:text="@string/create_mini_site_submit"
                android:layout_height="96dp" />
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
</FrameLayout>