<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blueprint.watershed.LandingPageActivity"
    android:background="@drawable/landing_page_photo"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Button
                    android:id="@+id/facebook_button"
                    android:onClick="didTapFacebookButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_standard_height"
                    android:layout_weight=".90"
                    android:background="@color/white"
                    android:textSize="14sp"
                    android:text="@string/landing_page_facebook_button"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/sign_up_load_fragment_button"
                    android:onClick="didTapSignUpLoadFragmentButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_standard_height"
                    android:layout_weight=".90"
                    android:background="@color/white"
                    android:textSize="14sp"
                    android:text="@string/landing_page_sign_up_button"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/login_load_fragment_button"
                    android:onClick="didTapLoginLoadFragmentButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_standard_height"
                    android:layout_weight=".90"
                    android:background="@color/white"
                    android:textSize="14sp"
                    android:text="@string/landing_page_login_button"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
